# epoll-http-server

./: CMakeLists.txt  README.md  test.cpp
benchmarks/: ServerBench.cpp
headers/: Client.h  Logger.h  Server.h  Socket.h
src/: Logger.cpp  Server.cpp  main.cpp
tests/: ServerTest.cpp
